overload getConnection methods